// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Convert Should convert between fields named sql (SELECT FALSE as "col1", TRUE as "col2") 1`] = `
Object {
  "params": Array [],
  "result": Array [
    Object {
      "name": "col1",
      "type": "boolean",
    },
    Object {
      "name": "col2",
      "type": "boolean",
    },
  ],
}
`;

exports[`Convert Should convert between fields not named sql (SELECT FALSE as "col1", TRUE as "col2") 1`] = `
Object {
  "params": Array [],
  "result": Array [
    Object {
      "name": "col1",
      "type": "boolean",
    },
    Object {
      "name": "col2",
      "type": "boolean",
    },
  ],
}
`;

exports[`Convert Should convert boolean fields mixed sql (SELECT FALSE, TRUE as "col2") 1`] = `
Object {
  "params": Array [],
  "result": Array [
    Object {
      "name": "bool",
      "type": "boolean",
    },
    Object {
      "name": "col2",
      "type": "boolean",
    },
  ],
}
`;

exports[`Convert Should convert boolean fields named sql (SELECT FALSE as "col1", TRUE as "col2") 1`] = `
Object {
  "params": Array [],
  "result": Array [
    Object {
      "name": "col1",
      "type": "boolean",
    },
    Object {
      "name": "col2",
      "type": "boolean",
    },
  ],
}
`;

exports[`Convert Should convert boolean fields not named sql (SELECT FALSE, TRUE) 1`] = `
Object {
  "params": Array [],
  "result": Array [
    Object {
      "name": "bool",
      "type": "boolean",
    },
    Object {
      "name": "bool",
      "type": "boolean",
    },
  ],
}
`;

exports[`Convert Should convert case sql (SELECT CASE WHEN TRUE THEN TRUE ELSE 'other' END) 1`] = `
Object {
  "params": Array [],
  "result": Array [
    Object {
      "name": "?column?",
      "type": Array [
        "boolean",
        "string",
      ],
    },
  ],
}
`;

exports[`Convert Should convert join fields sql (
        SELECT
          t1.col1 as "col1",
          t1.col2 as "myCol2",
          table2.col2 as "other"
        FROM table1 AS t1
        JOIN table2 ON table2.id = table1.id
      ) 1`] = `
Object {
  "params": Array [],
  "result": Array [
    Object {
      "name": "col1",
      "type": Object {
        "column": "col1",
        "table": Array [
          "table1",
        ],
        "type": "column",
      },
    },
    Object {
      "name": "myCol2",
      "type": Object {
        "column": "col2",
        "table": Array [
          "table1",
        ],
        "type": "column",
      },
    },
    Object {
      "name": "other",
      "type": Object {
        "column": "col2",
        "table": Array [
          "table2",
        ],
        "type": "column",
      },
    },
  ],
}
`;

exports[`Convert Should convert join with aliases fields sql (
        SELECT
          t1.col1 as "col1",
          t1.col2 as "myCol2",
          myT2.col2 as "other",
          myT4.col_9 as "test"
        FROM fit.table1 AS t1
        JOIN fit.table2 as "myT2" ON table2.id = table1.id
        JOIN table3 as "myT4" ON myT2.id = table1.id
      ) 1`] = `
Object {
  "params": Array [],
  "result": Array [
    Object {
      "name": "col1",
      "type": Object {
        "column": "col1",
        "table": Array [
          "fit",
          "table1",
        ],
        "type": "column",
      },
    },
    Object {
      "name": "myCol2",
      "type": Object {
        "column": "col2",
        "table": Array [
          "fit",
          "table1",
        ],
        "type": "column",
      },
    },
    Object {
      "name": "other",
      "type": Object {
        "column": "col2",
        "table": Array [
          "fit",
          "table2",
        ],
        "type": "column",
      },
    },
    Object {
      "name": "test",
      "type": Object {
        "column": "col_9",
        "table": Array [
          "table3",
        ],
        "type": "column",
      },
    },
  ],
}
`;

exports[`Convert Should convert static fields sql (SELECT col1 as "col1", col2 as "myCol2" FROM table1) 1`] = `
Object {
  "params": Array [],
  "result": Array [
    Object {
      "name": "col1",
      "type": Object {
        "column": "col1",
        "table": Array [],
        "type": "column",
      },
    },
    Object {
      "name": "myCol2",
      "type": Object {
        "column": "col2",
        "table": Array [],
        "type": "column",
      },
    },
  ],
}
`;

exports[`Convert Should convert string fields not named sql (SELECT 'test', $$Dianne's horse$$, $SomeTag$Dianne's horse$SomeTag$) 1`] = `
Object {
  "params": Array [],
  "result": Array [
    Object {
      "name": "?column?",
      "type": "string",
    },
    Object {
      "name": "?column?",
      "type": "string",
    },
    Object {
      "name": "?column?",
      "type": "string",
    },
  ],
}
`;
